# flow-forecast

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Package.resolved  Package.swift  README.md  airbnb.swiftformat  docker-compose.yml  flow-forecast.openapi.yml  package-lock.json  package.json  pyproject.toml  server.py
.github/: pull_request_template.md
Sources/App/: configure.swift  entrypoint.swift  routes.swift
Sources/App/Controllers/Forecast/: ForecastController.swift  Forecaster.swift
Sources/App/Lib/: FlowForecast.swift
Tests/AppTests/: AppTests.swift
flow_forecast/: __init__.py  main.py
flow_forecast/controller/: forecast_controller.py
flow_forecast/controllers/: forecast_controller.py
flow_forecast/helper/: controller_helper.py
flow_forecast/helpers/: controller_helper.py
flow_forecast/model/: prophet_forecast.py
flow_forecast/models/: prophet_forecast.py
flow_forecast/router/: router.py
flow_forecast/services/: model_service.py  usgs_service.py
flow_forecast/usgs/: router.py
