[tool.poetry]
name = "flow-forecast"
version = "0.1.0"
description = ""
authors = ["drewalth <16584198+drewalth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "~3.7.2"
pandas = "~2.0.3"
prophet = "~1.1.4"
urllib3 = "~2.0.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
