[tool.poetry]
name = "flow-forecast"
version = "0.1.0"
description = ""
authors = ["drewalth <16584198+drewalth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "~3.7.2"
pandas = "~2.0.3"
prophet = "~1.1.4"
urllib3 = "~2.0.3"
flask = "^3.0.3"
waitress = "^3.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 130
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 130
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
skip-string-normalization = false